k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
  namespace: portfolio
  labels:
    app: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
